k8s/product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: cloud-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: apnacloudproject.azurecr.io/product-service:v2
          ports:
            - containerPort: 8082
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 30
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: cloud-project
spec:
  selector:
    app: product-service
  ports:
    - port: 8082
      targetPort: 8082
